# handoff-fanout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh.md  pyproject.toml
audits/: p38-gateway-audit-R1-deepseek.md  p38-gateway-audit-R1-gemini.md  p38-gateway-audit-R2-deepseek.md  p38-gateway-audit-R2-gemini.md  p38-gateway-audit-R3-deepseek.md  p38-gateway-audit-R3-gemini.md  p38-gateway-audit-R4-deepseek.md  p38-gateway-audit-R4-gemini.md  p38-gateway-audit-R5-deployed-bytes-deepseek.md  p38-gateway-audit-R5-deployed-bytes-gemini.md  p43-fast-press-design-r1.md  p43-fast-press-design-r1.md.evidence.json  p43-fast-press-impl-r2.md  p43-fast-press-impl-r2.md.evidence.json  p44-unlock-race-design-r1.md  p44-unlock-race-design-r1.md.evidence.json  p44-unlock-race-design-r1b.md  p44-unlock-race-design-r1b.md.evidence.json  p44-unlock-race-impl-r2.md  p44-unlock-race-impl-r2.md.evidence.json  p44-unlock-race-impl-r2b.md  p44-unlock-race-impl-r2b.md.evidence.json  p44-unlock-race-impl-r2c.md  p44-unlock-race-impl-r2c.md.evidence.json  p51-foreign-veto-dualbrain-r2.md  p51-foreign-veto-dualbrain-r2.md.evidence.json  p51-foreign-veto-dualbrain-r3.md  p51-foreign-veto-dualbrain-r3.md.evidence.json  p51-foreign-veto-dualbrain-r4.md  p51-foreign-veto-dualbrain-r4.md.evidence.json  p51-foreign-veto-dualbrain.md  p51-foreign-veto-dualbrain.md.evidence.json  p52-launcher-restore-p44-dualbrain.md  p52-launcher-restore-p44-dualbrain.md.evidence.json
docs/: ARCHITECTURE.md  DUALBRAIN-FOCUS.md  PROTOCOL.md  R1-FOCUS.md  R2R4-FOCUS.md  audit-prompt-fullsweep.md  design-flagged-gaps-fix-2026-06-01.md  design-headless-fallback-display-off.md  design-per-session-worktree-isolation-2026-06-03.md  design-roadmap-freshness.md  design-terminal-native-autocontinue.md  design-unlock-pivot-and-autoclose-removal-2026-05-31.md  headless-validation-evidence.md  req3-autoclose-worker-windows.md  runbook-backup-and-recovery.md  runbook-step2c-onbox-validation.md  runbook-unlock-pivot-rollout.md
extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
install/: auto-continue.sh  backup-handoff-state.sh  dump-handoff.py  install.sh  install_keybinding.py  keybindings-claude-focus.json  keybindings-singlepane.json
placement-staged/: coord-place-window.py
project-files/: claude-master-decontamination-report-20260619.md  (+2 more)
(+181 files in other folders)
